<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bottomeDivider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        tools:layout_editor_absoluteX="0dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/email_box"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:hint="Example: Shaz@gmail.com"
                android:inputType="textEmailAddress"
                android:textColor="@color/textPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <ImageView
                android:id="@+id/eventScreenAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="50dp"
                android:src="@drawable/community_logo_name"
                android:contentDescription="@string/community"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/topDivider"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventScreenAppName" />


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:paddingBottom="1dp"
                android:text="@string/name_string"
                android:textColor="@color/headerPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/name_box"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topDivider" />

            <EditText
                android:id="@+id/name_box"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:hint="Example: Shaz"
                android:inputType="textPersonName"
                android:textColor="@color/textPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="78dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:paddingBottom="1dp"
                android:text="@string/email_string"
                android:textColor="@color/headerPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/email_box"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_box"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="104dp"
                android:layout_marginEnd="367dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:paddingBottom="1dp"
                android:text="@string/phone_text"
                android:textColor="@color/headerPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/phone_box"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_box"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/phone_box"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:hint="Example: 3061112222"
                android:inputType="phone"
                android:textColor="@color/textPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
            android:id="@+id/bottomeDivider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginBottom="84dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/save_button"
            android:layout_width="150sp"
            android:layout_height="48sp"
            android:text="Save"
            android:background="@drawable/button_color"
            android:textColor="@color/button_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete_unity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottomeDivider" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_unity"
            android:layout_width="160sp"
            android:layout_height="55sp"
            android:layout_margin="1dp"
            android:layout_marginStart="147dp"
            android:text="Delete Unity"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@color/button_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/save_button"
            app:layout_constraintTop_toBottomOf="@+id/bottomeDivider" />


</androidx.constraintlayout.widget.ConstraintLayout>